--- a/.env.local
+++ b/.env.local
@@ -3,9 +3,5 @@ APP_PORT=3000
 DATABASE_URL=host=localhost user=docker password=docker dbname=messages port=5432 sslmode=disable
 
 
-KAFKA_HOST=[::1]:9092
+KAFKA_HOST=localhost:9092
 KAKFA_GROUP_ID=kafka-message-scheduler
-
-
-KAFKA_DEFAULT_TOPIC_PARTITION=10
-KAFKA_DEFAULT_TOPIC_REPLICATION_FACTOR=1
