--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
       - POSTGRES_USER=docker
       - POSTGRES_PASSWORD=docker
       - POSTGRES_DB=messages
+    command: [ "postgres", "-c", "wal_level=logical" ]
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
