--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 APP_PORT=3000
 
-DATABASE_URL=host=localhost user=docker password=docker dbname=messages port=5432 sslmode=disable
+DATABASE_URL=host=localhost user=docker password=docker dbname=messages port=5432 sslmode=disable timezone=UTC
 
 
 KAFKA_HOST=localhost:9092
